[package]
name = "academic_record_keeping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
colored = "2.1.0"
colored_json = "5.0.0"
csv = "1.3.0"
jsonschema = "0.17.1"
num-traits = "0.2.19"
num_enum = "0.7.2"
schemars = "0.8.19"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.116"
strum = { version = "0.26", features = ["derive"] }
